kubernetes/applications/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: apps
  labels:
    app: immich-server
spec:
  ports:
    - port: 2283
      name: http
  selector:
    app: immich-server
